--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -194,9 +194,21 @@
 }
 
 .needs-display {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
+  .needs-list {
+    margin: 0;
+    padding-left: 20px;
+    color: var(--app-text-secondary);
+
+    li {
+      margin-bottom: 4px;
+      font-size: 14px;
+      line-height: 1.4;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
 .edit-actions {
