--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -80,8 +80,15 @@
     flex: 1;
 
     h4 {
-      margin: 0 0 0.5rem 0;
+      margin: 0 0 0.25rem 0;
       color: var(--app-text);
+    }
+
+    .member-role {
+      margin: 0;
+      font-size: 0.875rem;
+      color: var(--ion-color-medium);
+      font-weight: 500;
     }
   }
 
