--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -205,3 +205,7 @@
     </div>
   }
 </ion-card>
+
+<!-- Divider between project cards -->
+<ion-item-divider class="project-card-divider"></ion-item-divider>
+
