--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -261,3 +261,13 @@
     }
   }
 }
+
+/* Project card divider */
+.project-card-divider {
+  --background: var(--ion-color-light);
+  --color: var(--ion-color-medium);
+  margin: 0 16px;
+  height: 1px;
+  min-height: 1px;
+  opacity: 0.6;
+}
