--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -19,8 +19,6 @@
       flex: 1;
 
       .creator-avatar {
-        width: 36px;
-        height: 36px;
         border: 2px solid var(--app-primary-color);
       }
 
@@ -201,8 +199,7 @@
         border: 1px solid var(--app-border-color);
 
         .collaborator-avatar {
-          width: 36px;
-          height: 36px;
+          // Using centralized avatar-small class
         }
 
         .collaborator-details {
