--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -19,7 +19,7 @@
     <ion-card class="profile-form-card">
       <ion-card-content>
         <div class="avatar-section">
-          <ion-avatar class="profile-avatar">
+          <ion-avatar class="profile-avatar avatar-large">
             @if (photoURL) {
               <img [src]="photoURL" [alt]="displayName || 'User'">
             } @else {
