--- a/src/app/public-inner-project/public-inner-project.component.html
+++ b/src/app/public-inner-project/public-inner-project.component.html
@@ -28,7 +28,7 @@
       <ion-card class="project-card">
         <ion-card-header class="project-header">
           <div class="creator-info">
-            <ion-avatar class="creator-avatar">
+            <ion-avatar class="creator-avatar avatar-small">
               @if (project()?.creator?.photoURL) {
                 <img [src]="project()?.creator?.photoURL" [alt]="project()?.creator?.displayName || 'Creator'">
               } @else {
