--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -93,8 +93,7 @@
   }
 
   ion-avatar {
-    width: 40px;
-    height: 40px;
+    // Using centralized avatar-small class
   }
 }
 
@@ -135,8 +134,7 @@
     flex: 1;
 
     ion-avatar {
-      width: 40px;
-      height: 40px;
+      // Using centralized avatar-small class
     }
 
     .request-details {
