--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -31,8 +31,9 @@
           <ion-button expand="block" (click)="signUp()" [disabled]="loading()">
             @if (loading()) {
               <ion-spinner></ion-spinner>
+            } @else {
+              {{ 'AUTH.REGISTER_TITLE' | translate }}
             }
-            {{ 'AUTH.REGISTER_TITLE' | translate }}
           </ion-button>
         </div>
 
@@ -41,12 +42,13 @@
         </div>
 
         <div class="ion-margin-bottom">
-          <ion-button expand="block" fill="outline" (click)="signInWithGoogle()" [disabled]="loading()">
-            <ion-icon name="logo-google" slot="start"></ion-icon>
-            @if (loading()) {
+          <ion-button expand="block" fill="outline" (click)="signInWithGoogle()" [disabled]="googleLoading">
+            @if (googleLoading) {
               <ion-spinner></ion-spinner>
+            } @else {
+              <ion-icon name="logo-google" slot="start"></ion-icon>
+              {{ 'FORMS.CONTINUE_WITH_GOOGLE' | translate }}
             }
-            {{ 'FORMS.CONTINUE_WITH_GOOGLE' | translate }}
           </ion-button>
         </div>
 
