--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -39,9 +39,16 @@
     @if (project().needs && project().needs.length > 0) {
       <div class="project-needs">
         <ul class="needs-list">
-          @for (need of project().needs; track need) {
-            <li>{{ need }}</li>
-          }
+                          @for (need of project().needs; track need) {
+                  <li>
+                    <ion-icon 
+                      [name]="getNeedIcon(need)" 
+                      [color]="getNeedIconColor(need)"
+                      class="need-icon">
+                    </ion-icon>
+                    {{ need }}
+                  </li>
+                }
         </ul>
       </div>
     }
