--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -89,9 +89,17 @@
           margin-bottom: 4px;
           font-size: 14px;
           line-height: 1.4;
+          display: flex;
+          align-items: center;
+          gap: 8px;
 
           &:last-child {
             margin-bottom: 0;
+          }
+
+          .need-icon {
+            font-size: 16px;
+            flex-shrink: 0;
           }
         }
       }
