--- a/src/app/public-inner-project/public-inner-project.component.scss
+++ b/src/app/public-inner-project/public-inner-project.component.scss
@@ -157,9 +157,17 @@ ion-header {
           margin-bottom: 4px;
           font-size: 14px;
           line-height: 1.4;
+          display: flex;
+          align-items: center;
+          gap: 8px;
 
           &:last-child {
             margin-bottom: 0;
+          }
+
+          .need-icon {
+            font-size: 16px;
+            flex-shrink: 0;
           }
         }
       }
